--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,18 +25,13 @@ jobs:
       with:
         python-version: 3.9
 
-    # Step 3: Change working directory (if needed)
-    - name: Change working directory
-      run: |
-        cd ${{ github.workspace }}
-
-    # Step 4: Install dependencies
+    # Step 3: Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r backend/requirements.txt
+        pip install -r requirements.txt
 
-    # Step 5: Run tests
+    # Step 4: Run tests
     - name: Run tests
       run: |
         pytest  # Replace with your test framework
