--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
+    # tests other changes here
     steps:
     # Step 1: Checkout the code
     - name: Checkout code
