--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+    # Step 4: Debug file structure (add this step)
+    - name: Debug file structure
+      run: ls -R backend
     # Step 4: Run tests
     - name: Run tests
       run: |
