--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,29 +41,56 @@ jobs:
     if: github.ref == 'refs/heads/coding'
 
     steps:
-    # Step 1: Checkout code
-    - name: Checkout code
+    # Step 1: Checkout the coding branch
+    - name: Checkout coding branch
       uses: actions/checkout@v3
 
-    # Step 2: Merge coding into main
-    - name: Merge coding into main
-      run: |
-        git config user.name "${{ github.actor }}"
-        git config user.email "${{ github.actor }}@users.noreply.github.com"
-        git fetch origin
-        git checkout main || git checkout -b main
-        git pull origin main
-        git merge coding --allow-unrelated-histories --no-ff -m "Automated merge of coding into main"
-        git push origin main
+    # Step 2: Create Pull Request from coding to main
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v5
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        branch: coding
+        base: main
+        title: "Automated PR: Merge coding into main"
+        body: |
+          This PR was automatically created by GitHub Actions.
+          It merges changes from `coding` into `main`.
+        commit-message: "Automated sync: Merge coding into main"
 
-  deploy:
+  wait-for-merge:
     needs: create-pr
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout code
-    - name: Checkout code
+    # Step 1: Wait for PR to be merged
+    - name: Wait for PR merge
+      uses: actions/github-script@v6
+      with:
+        script: |
+          const { data: pullRequests } = await github.rest.pulls.list({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            state: "open",
+            head: `${context.repo.owner}:coding`,
+          });
+          if (pullRequests.length > 0) {
+            console.log(`Waiting for PR #${pullRequests[0].number} to be merged.`);
+            throw new Error("Pull Request not merged yet. Stopping pipeline.");
+          } else {
+            console.log("No open pull requests found for the coding branch. Continuing pipeline.");
+          }
+
+  deploy:
+    needs: wait-for-merge
+    runs-on: ubuntu-latest
+
+    steps:
+    # Step 1: Checkout the main branch
+    - name: Checkout main branch
       uses: actions/checkout@v3
+      with:
+        ref: main
 
     # Step 2: Deploy application
     - name: Deploy application
