--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+    - name: Install spaCy model
+      run: python -m spacy download en_core_web_sm
     # Step 4: Debug file structure
     - name: Debug file structure
       run: ls -R backend
