--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ pytest
 python-docx
 python-dotenv
 spacy
-mysql-connector-python== 8.0.40  # Specify the version compatible with your code
+mysql-connector-python==8.0.33  # Specify the version compatible with your code
