--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,6 +9,17 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0
+        ports:
+        - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          MYSQL_DATABASE: ${{ secrets.DB_NAME }}
+          MYSQL_USER: ${{ secrets.DB_USER }}
+          MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
     steps:
     # Step 1: Checkout the code
     - name: Checkout code
@@ -20,19 +31,34 @@ jobs:
       with:
         python-version: 3.9
 
-    # Step 3: Install dependencies
+    # Step 3: Generate .env file
+    - name: Add .env Variables
+      run: |
+        echo "DB_HOST=127.0.0.1" >> .env
+        echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+        echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+
+    # Step 4: Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
     - name: Install spaCy model
       run: python -m spacy download en_core_web_sm
-    # Step 4: Debug file structure
+
+    # Step 5: Debug file structure
     - name: Debug file structure
       run: ls -R backend
 
-    # Step 5: Run tests
+    # Step 6: Run tests
     - name: Run tests
+      env:
+        DB_HOST: 127.0.0.1
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        DB_NAME: ${{ secrets.DB_NAME }}
       run: |
         pytest  # Replace with your test framework
 
