--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,17 +21,14 @@ jobs:
           MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
     steps:
-    # Step 1: Checkout the code
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Step 2: Set up Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: 3.9
 
-    # Step 3: Generate .env file
     - name: Add .env Variables
       run: |
         echo "DB_HOST=127.0.0.1" >> .env
@@ -39,7 +36,21 @@ jobs:
         echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
         echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
 
-    # Step 4: Install dependencies
+    - name: Wait for MySQL
+      run: |
+        for i in {1..10}; do
+          if mysqladmin ping -h 127.0.0.1 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} --silent; then
+            echo "MySQL is up and running."
+            break
+          fi
+          echo "Waiting for MySQL..."
+          sleep 5
+        done
+        if ! mysqladmin ping -h 127.0.0.1 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} --silent; then
+          echo "MySQL did not start in time."
+          exit 1
+        fi
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -48,11 +59,10 @@ jobs:
     - name: Install spaCy model
       run: python -m spacy download en_core_web_sm
 
-    # Step 5: Debug file structure
-    - name: Debug file structure
-      run: ls -R backend
+    - name: Test MySQL connection
+      run: |
+        mysql -h 127.0.0.1 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES;"
 
-    # Step 6: Run tests
     - name: Run tests
       env:
         DB_HOST: 127.0.0.1
@@ -60,28 +70,4 @@ jobs:
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         DB_NAME: ${{ secrets.DB_NAME }}
       run: |
-        pytest  # Replace with your test framework
-
-  merge-coding-to-main:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-
-    steps:
-    # Step 1: Checkout the coding branch
-    - name: Checkout coding branch
-      uses: actions/checkout@v3
-      with:
-        ref: coding
-
-    # Step 2: Fetch all branches
-    - name: Fetch all branches
-      run: git fetch --all
-
-    # Step 3: Merge coding into main with unrelated histories
-    - name: Merge coding into main
-      run: |
-        git config user.name "${{ github.actor }}"
-        git config user.email "${{ github.actor }}@users.noreply.github.com"
-        git checkout main || git checkout -b main
-        git merge coding --allow-unrelated-histories --no-ff --commit -m "Sync coding into main"
-        git push origin main
+        pytest
