--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,7 +34,7 @@ jobs:
     # Step 3: Generate .env file dynamically
     - name: Add .env Variables
       run: |
-        echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+        echo "DB_HOST=127.0.0.1" >> .env
         echo "DB_USER=${{ secrets.DB_USER }}" >> .env
         echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
         echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
