--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,6 +9,17 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0
+        ports:
+        - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          MYSQL_DATABASE: ${{ secrets.DB_NAME }}
+          MYSQL_USER: ${{ secrets.DB_USER }}
+          MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
     steps:
     # Step 1: Checkout the code
     - name: Checkout code
@@ -20,42 +31,40 @@ jobs:
       with:
         python-version: 3.9
 
-    # Step 3: Install dependencies
+    # Step 3: Add .env Variables
+    - name: Add .env Variables
+      run: |
+        echo "DB_HOST=127.0.0.1" >> .env
+        echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+        echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+
+    # Step 4: Start MySQL Service
+    - name: Start MySQL Service
+      run: sudo systemctl start mysql
+
+    # Step 5: Verify MySQL Service Status
+    - name: Verify MySQL Service
+      run: sudo systemctl status mysql
+
+    # Step 6: Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
     - name: Install spaCy model
       run: python -m spacy download en_core_web_sm
-    # Step 4: Debug file structure
+
+    # Step 7: Debug file structure
     - name: Debug file structure
       run: ls -R backend
 
-    # Step 5: Run tests
+    # Step 8: Test MySQL Connection
+    - name: Test MySQL Connection
+      run: |
+        mysql -h 127.0.0.1 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES;"
+
+    # Step 9: Run tests
     - name: Run tests
-      run: |
-        pytest  # Replace with your test framework
-
-  merge-coding-to-main:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-
-    steps:
-    # Step 1: Checkout the coding branch
-    - name: Checkout coding branch
-      uses: actions/checkout@v3
-      with:
-        ref: coding
-
-    # Step 2: Fetch all branches
-    - name: Fetch all branches
-      run: git fetch --all
-
-    # Step 3: Merge coding into main with unrelated histories
-    - name: Merge coding into main
-      run: |
-        git config user.name "${{ github.actor }}"
-        git config user.email "${{ github.actor }}@users.noreply.github.com"
-        git checkout main || git checkout -b main
-        git merge coding --allow-unrelated-histories --no-ff --commit -m "Sync coding into main"
-        git push origin main
+      run: pytest
