--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,6 +17,8 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
           MYSQL_DATABASE: ${{ secrets.DB_NAME }}
+          MYSQL_USER: ${{ secrets.DB_USER }}
+          MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
     steps:
     # Step 1: Checkout the code
@@ -29,19 +31,18 @@ jobs:
       with:
         python-version: 3.9
 
-    # Step 3: Add .env Variables
+    # Step 3: Generate .env file
     - name: Add .env Variables
       run: |
         echo "DB_HOST=127.0.0.1" >> .env
-        echo "DB_USER=root" >> .env
+        echo "DB_USER=${{ secrets.DB_USER }}" >> .env
         echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
         echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
 
-    # Step 4: Verify MySQL Service
-    - name: Verify MySQL Connection
+    # Step 4: Set up the database schema
+    - name: Set up Database
       run: |
-        sleep 15  # Give MySQL some time to initialize
-        mysql -h 127.0.0.1 -uroot -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES;"
+        mysql -h 127.0.0.1 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} ${{ secrets.DB_NAME }} < schema.sql
 
     # Step 5: Install dependencies
     - name: Install dependencies
@@ -60,31 +61,8 @@ jobs:
     - name: Run tests
       env:
         DB_HOST: 127.0.0.1
-        DB_USER: root
+        DB_USER: ${{ secrets.DB_USER }}
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         DB_NAME: ${{ secrets.DB_NAME }}
-      run: pytest
-
-  merge-coding-to-main:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-
-    steps:
-    # Step 1: Checkout the coding branch
-    - name: Checkout coding branch
-      uses: actions/checkout@v3
-      with:
-        ref: coding
-
-    # Step 2: Fetch all branches
-    - name: Fetch all branches
-      run: git fetch --all
-
-    # Step 3: Merge coding into main with unrelated histories
-    - name: Merge coding into main
       run: |
-        git config user.name "${{ github.actor }}"
-        git config user.email "${{ github.actor }}@users.noreply.github.com"
-        git checkout main || git checkout -b main
-        git merge coding --allow-unrelated-histories --no-ff --commit -m "Sync coding into main"
-        git push origin main
+        pytest
