--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *.pyc
 *.pyo
 .env
+env/
 venv/
 
 # Node.js
@@ -14,3 +15,4 @@ dist/
 Thumbs.db
 # Custom Folders
 backend/backend/static/customized_cvs/
+env
