--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,45 @@ venv/
 # Node.js
 node_modules/
 dist/
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+.npmrc
+
+# Cypress
+/cypress/videos/
+/cypress/screenshots/
 
 # System Files
 .DS_Store
 Thumbs.db
+
 # Custom Folders
 backend/backend/static/customized_cvs/
 env
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+vite.config.ts.timestamp*
+
+# Editor Directories and Files
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.env
+*.tsbuildinfo
+.eslintcache
