--- a/frontend/job-automation-frontend/package.json
+++ b/frontend/job-automation-frontend/package.json
@@ -15,6 +15,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-3": "^0.5.1",
+    "bootstrap-vue-next": "^0.26.19",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -39,6 +43,7 @@
     "nightwatch": "^3.9.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.3.3",
+    "sass-embedded": "^1.83.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
