--- a/frontend/job-automation-frontend/package.json
+++ b/frontend/job-automation-frontend/package.json
@@ -19,8 +19,10 @@
     "bootstrap": "^5.3.3",
     "bootstrap-vue-3": "^0.5.1",
     "bootstrap-vue-next": "^0.26.19",
+    "chart.js": "^4.4.7",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
